<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.anshare.edpsystem.MainActivity$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/MainTime"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.25"
                android:ems="10"
                android:gravity="center"
                android:text="Time"
                android:textColor="#000000"
                android:textSize="125sp" />

            <TextView
                android:id="@+id/MainDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.20"
                android:ems="10"
                android:gravity="center"
                android:text="Data Area"
                android:textColor="#111111"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/WelcomeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="50dp"
                android:layout_weight="0.3"
                android:ems="10"
                android:gravity="center"
                android:text="@string/WelcomeText"
                android:textColor="#222222"
                android:textSize="45sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/button_MainEnter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#4488FF"
                    android:height="100dp"
                    android:text="@string/MainEnterMode"
                    android:textColor="#000000"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/button_MainAutoset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#77FF55"
                    android:height="100dp"
                    android:text="@string/AutoMode"
                    android:textColor="#000000"
                    android:textSize="30sp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>