<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    android:background="@android:color/white"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    tools:context="com.anshare.edpsystem.MainActivity$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="0dp" >

            <LinearLayout
                android:layout_width="700dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:layout_weight="0.75"
                android:gravity="center"
                android:orientation="vertical" >

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:background="#AAAAAA"
                    android:gravity="center"
                    android:scrollbarStyle="insideOverlay"
                    android:scrollbars="vertical" >

                    <TableRow
                        android:id="@+id/tableRow1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.25"
                        android:gravity="center" >

                        <ImageView
                            android:id="@+id/FSet_imagetable1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0.33"
                            android:scaleType="center"
                            android:src="@drawable/ic_launcher" />

                        <ImageView
                            android:id="@+id/FSet_imagetable2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0.33"
                            android:src="@drawable/ic_launcher" />

                        <ImageView
                            android:id="@+id/FSet_imagetable3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0.33"
                            android:src="@drawable/ic_launcher" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.25" >

                        <ImageView
                            android:id="@+id/FSet_imagetable4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0.33"
                            android:src="@drawable/ic_launcher" />

                        <ImageView
                            android:id="@+id/FSet_imagetable5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0.33"
                            android:src="@drawable/ic_launcher" />

                        <ImageView
                            android:id="@+id/FSet_imagetable6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0.33"
                            android:src="@drawable/ic_launcher" />

                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.25" >

                        <ImageView
                            android:id="@+id/FSet_imagetable7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0.33"
                            android:gravity="center"
                            android:src="@drawable/ic_launcher" />

                        <ImageView
                            android:id="@+id/FSet_imagetable8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0.33"
                            android:gravity="center"
                            android:src="@drawable/ic_launcher" />

                        <ImageView
                            android:id="@+id/FSet_imagetable9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0.33"
                            android:gravity="center"
                            android:src="@drawable/ic_launcher" />

                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.25" >

                        <ImageView
                            android:id="@+id/FSet_imagetable10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0.33"
                            android:gravity="center"
                            android:src="@drawable/ic_launcher" />

                        <ImageView
                            android:id="@+id/FSet_imagetable11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0.33"
                            android:gravity="center"
                            android:src="@drawable/ic_launcher" />

                        <ImageView
                            android:id="@+id/FSet_imagetable12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0.33"
                            android:gravity="center"
                            android:src="@drawable/ic_launcher" />

                    </TableRow>
                </TableLayout>

                <ScrollView
                    android:id="@+id/scrollView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.2"
                    android:background="#DDDDFF" >

                </ScrollView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.25"
                android:background="#DDFFDD"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/FSet1_imageView0"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_launcher" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_weight="0.6"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/FSet1_0Dital1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.2"
                        android:text="模板名称"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/FSet1_0Dital2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.2"
                        android:text="导入时间"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/FSet1_0Dital3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.6"
                        android:text="详情"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="0.33"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/FSet1_back"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:background="#FFCC22"
                    android:text="@string/EDP_Back"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.33"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/FSet1_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:background="#4488FF"
                    android:text="@string/EDP_PutIn"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.33"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/FSet1_next"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:background="#77FF55"
                    android:text="@string/EDP_Next"
                    android:textSize="20sp" />

            </LinearLayout>
            
        </LinearLayout>
    </LinearLayout>
                
</RelativeLayout>